fix scrollbar iframe

--- a/asset/styles/style_staff.css
+++ b/asset/styles/style_staff.css
@@ -31,7 +31,7 @@
     margin-top: 2rem;
 }
 
-.staff__list:first-child {
+.staff__list {
     margin-bottom: 10rem;
 }
 
